# Polinom

./: CMakeLists.txt
include/: CMakeLists.txt
include/list/: CMakeLists.txt  list.h
include/polinom/: CMakeLists.txt  polinom.cpp  polinom.h
test/: CMakeLists.txt  test_monom.cpp  test_polinom.cpp
